2008-01-21  Zoltan Varga  <vargaz@gmail.com>

	* mini-x86.h (MONO_ARCH_AOT_SUPPORTED): Disable AOT for apple x86.

2008-01-20  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (mono_arch_emit_prolog): Optimize the omit fp case to save two
	stack slots.

2008-01-18  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (mono_arch_emit_prolog): Disable	the new optimization if
	profiling is enabled.
	
	* mini-amd64.c (mono_arch_call_opcode): Emit the save_sp_to_lmf instruction at
	the end.
	(mono_arch_emit_prolog): Add more first bblock optimizations.

	* mini-amd64.c (mono_arch_call_opcode): Keep assignments to the arg registers
	in order if possible.
	(mono_arch_emit_prolog): Optimize assignments to arg registers in the first
	bblock, since the arguments are still in their original registers.

	* mini.c (type_from_op): Calling add.ovf on floats is not valid IL code.

2008-01-17  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_to_ir): Use the no-spilling optimization for CEE_CALLI
	as well.

	* mini-amd64.c (mono_arch_emit_prolog): Save an instruction if the LMF is at
	offset 0.

	* mini-amd64.h (MONO_ARCH_HAVE_NOTIFY_PENDING_EXC): Turn on this for amd64.

	* exceptions-amd64.c (mono_arch_notify_pending_exc): New function to 
	process async exceptions received while in unmanaged code.

	* mini.c (mini_init): Install a callback with the runtime which will be called
	when a thread receives an async exception while in unmanaged code.

	* mini.c driver.c: Update after mono_get_native_wrapper () signature change.

	* mini-s390x.c (mono_arch_output_basic_block): Fix s390x build.

2008-01-16  Wade Berrier  <wberrier@novell.com>

	* cpu-g4.md:
	* cpu-arm.md:
	* cpu-s390x.md:
	fix build

2008-01-16  Zoltan Varga  <vargaz@gmail.com>

	* mini-x86.c (mono_arch_output_basic_block): Remove some gccism which prevents
	compilation with sun cc.

	* cpu-*.md: Fix the build.

	* cpu-x86.md: Fix the length of some load membase opcodes. Fixes #354241.
