@@ -198,7 +198,7 @@ visit_bb (MonoCompile *cfg, MonoBasicBlock *bb, GSList **visited)
 		mono_aliasing_initialize_code_traversal (cfg->aliasing_info, bb);
 	
 	tree_num = 0;
-	MONO_INST_LIST_FOR_EACH_ENTRY (inst, &bb->ins_list, node) {
+	MONO_BB_FOR_EACH_INS (bb, inst) {
 		update_volatile (cfg, bb, inst, tree_num);
 		tree_num++;
 	}
@@ -294,7 +294,7 @@ mono_analyze_liveness (MonoCompile *cfg)
 			mono_aliasing_initialize_code_traversal (cfg->aliasing_info, bb);
 		
 		tree_num = 0;
-		MONO_INST_LIST_FOR_EACH_ENTRY (inst, &bb->ins_list, node) {
+		MONO_BB_FOR_EACH_INS (bb, inst) {
 #ifdef DEBUG_LIVENESS
 			mono_print_tree (inst); printf ("\n");
 #endif
@@ -531,10 +531,10 @@ optimize_initlocals (MonoCompile *cfg)
 
 	mono_bitset_clear_all (used);
 	initlocals_bb = cfg->bb_entry->next_bb;
-	MONO_INST_LIST_FOR_EACH_ENTRY (ins, &initlocals_bb->ins_list, node)
+	MONO_BB_FOR_EACH_INS (initlocals_bb, ins)
 		update_used (cfg, ins, used);
 
-	MONO_INST_LIST_FOR_EACH_ENTRY (ins, &initlocals_bb->ins_list, node) {
+	MONO_BB_FOR_EACH_INS (initlocals_bb, ins) {
 		if (ins->ssa_op == MONO_SSA_STORE) {
 			int idx = ins->inst_i0->inst_c0;
 			MonoInst *var = cfg->varinfo [idx];
