@@ -777,7 +777,7 @@ mono_local_regalloc (MonoCompile *cfg, MonoBasicBlock *bb)
 	fpcount = 0;
 	DEBUG (printf ("\nLOCAL REGALLOC: BASIC BLOCK: %d\n", bb->block_num));
 	/* forward pass on the instructions to collect register liveness info */
-	MONO_INST_LIST_FOR_EACH_ENTRY (ins, &bb->ins_list, node) {
+	MONO_BB_FOR_EACH_INS (bb, ins) {
 		spec = ins_get_spec (ins->opcode);
 
 		if (G_UNLIKELY (spec == MONO_ARCH_CPU_SPEC)) {
