@@ -2101,7 +2101,7 @@ mono_arch_output_basic_block (MonoCompile *cfg, MonoBasicBlock *bb)
 		break_count ();
 #endif
 
-	MONO_INST_LIST_FOR_EACH_ENTRY (ins, &bb->ins_list, node) {
+	MONO_BB_FOR_EACH_INS (bb, ins) {
 		offset = code.buf - cfg->native_code;
 
 		max_len = ((int)(((guint8 *)ins_get_spec (ins->opcode))[MONO_INST_LEN])) + 128;
