@@ -1693,7 +1693,7 @@ mono_arch_lowering_pass (MonoCompile *cfg, MonoBasicBlock *bb)
 	if (bb->max_vreg > cfg->rs->next_vreg)
 		cfg->rs->next_vreg = bb->max_vreg;
 
-	MONO_INST_LIST_FOR_EACH_ENTRY (ins, &bb->ins_list, node) {
+	MONO_BB_FOR_EACH_INS (bb, ins) {
 loop_start:
 		switch (ins->opcode) {
 		case OP_ADD_IMM:
@@ -2131,7 +2131,7 @@ mono_arch_output_basic_block (MonoCompile *cfg, MonoBasicBlock *bb)
 		//x86_inc_mem (code, &cov->data [bb->dfn].count); 
 	}
 
-	MONO_INST_LIST_FOR_EACH_ENTRY (ins, &bb->ins_list, node) {
+	MONO_BB_FOR_EACH_INS (bb, ins) {
 		offset = code - cfg->native_code;
 
 		max_len = ((guint8 *)ins_get_spec (ins->opcode))[MONO_INST_LEN];
@@ -3246,7 +3246,7 @@ mono_arch_emit_prolog (MonoCompile *cfg)
 		if (cfg->prof_options & MONO_PROFILE_COVERAGE)
 			max_offset += 6; 
 
-		MONO_INST_LIST_FOR_EACH_ENTRY (ins, &bb->ins_list, node)
+		MONO_BB_FOR_EACH_INS (bb, ins) {
 			max_offset += ((guint8 *)ins_get_spec (ins->opcode))[MONO_INST_LEN];
 	}
 
